@@ -1,8 +1,13 @@
-$eterna: CHANGES,v 1.71 2010/05/13 04:19:04 mrg Exp $
+$eterna: CHANGES,v 1.75 2010/06/17 19:26:54 mrg Exp $
 
 changes since bozohttpd 20100509:
 	o  fix some compile issues
-	o  fix SSL mode.  from rtr.
+	o  fix SSL mode.  from rtr
+	o  fix some cgi-bin issues, as seen with cvsweb
+	o  disable multi-file daemon mode for now, it breaks
+	o  return 404's instead of 403's when chdir of ~user dirs fail
+	o  remove "noreturn" attribute from bozo_http_error() that was
+	   causing incorrect runtime behaviour
 
 changes since bozohttpd 20090522:
 	o  major rework and clean up of internal interfaces.  move the main
